tryng to figure out spotify auth

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="currentUser">
     <div class="navbar-nav">
         <a class="nav-item nav-link" routerLink="/">Home</a>
+        <a class="nav-item nav-link" routerLink="spotify_login">Login with SpotifyAuth</a>
+        <a class="nav-item nav-link" (click)="get_spotify_user_info()">User Info</a>
         <a class="nav-item nav-link" (click)="logout()">Logout</a>
     </div>
 </nav>
